[metadata]
name = python_fbx_bindings
version = 0.0.1
description=Autodesk FBX Python Bindings package
long_description= file: README.md
long_description-content-type = text/markdown
author=Arcadium
author_email=sophie.bissaker@gmail.com
url=https://github.com/nannafudge/autodesk_fbx
license=MIT
license_files=
    LICENSE.txt
    AUTODESKLICENSE.rtf
package =
    python_fbx_bindings

[options]
zip_safe = False
install_requires =
    setuptools>=38.3
    wheel
    sip>=4.0.0,<=4.19.8
keywords =
    autodesk
    fbx
    maya
    filmbox
    3d

[aliases]
dists = bdist_wheel

[test]
extras = True
addopts = --verbose

[tool:pytest]
addopts =
    --verbose
norecursedirs =
    dist
    build
    .tox
    bin
    venv
    venv_test
    venv_linux
testpaths = tests

[bdist_wheel]
universal = 0

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel